amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/missing-directive-definition.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/missing-directive-definition.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-ast
  Message: Directive myDirective is not declared
  Severity: Violation
  Target: 
  Property: 
  Range: [(5,16)-(5,41)]
  Location: 
